--- a/bootstrap-3.3.7/docs/sticky-footer.css
+++ b/bootstrap-3.3.7/docs/sticky-footer.css
@@ -8,19 +8,15 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+.bottom0.panel-group  {
+margin-bottom: 0;
 }
 
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
+.notifications-scroll-area {
+    height: 150px;
+	position: relative;
+	overflow: auto;
+}
 
 .container {
   width: auto;
