--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ margin-bottom: 0;
 }
 
 .notifications-scroll-area {
-    height: 150px;
+    max-height: 50%;
 	position: relative;
 	overflow: auto;
 }
