--- a/index.css
+++ b/index.css
@@ -26,3 +26,9 @@ margin-bottom: 0;
 .container .text-muted {
   margin: 20px 0;
 }
+.inactiveLink {
+  color: black;
+  text-decoration:  none;
+  pointer-events: none;
+  cursor: default;
+}
